@@ -4,6 +4,7 @@ Copyright (C) 2010 Splitted-Desktop Systems
 Version 0.1.1 - DD.Mar.2010
 * Document public API for libgstvaapi-*.so.*
 * Optimize `vaapiconvert' pipeline (direct-rendering)
+* Allow `vaapisink` to render videos in fullscreen mode
 
 Version 0.1.0 - 16.Mar.2010
 * Initial release
